- Added tile to show an item is available from the Quicksilver shop

For more details on this update please visit the "What is New" page in the Apps or on the website
